added the rest of the functionality, oops

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,44 @@
 </head>
 <body>
 
-<%= yield %>
+  #navbar header
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" >daniel-week5</a>
+      </div>
+    </div>
+  </div>
+
+  #container for the main content
+  <div class="container">
+
+    #add info from each page
+    <%= yield %>
+
+    <footer>
+      <div class="row">
+        <div class= "col-md-6">
+          <%= link_to "Locations", root_path %>
+        </div>
+
+        <div class="col-md-6 text-right">
+          <a href="https://www.linkedin.com/in/danielwharrisdenver">
+            <%= image_tag 'linkedin.png', class: "img-footer", alt: "LinkedIn" %>
+          </a>
+          <a href="https://github.com/DaHarris">
+            <%= image_tag 'github.png', class: "img-footer", alt: "Github" %>
+          </a>
+          <a href="https://twitter.com/bobth3bum">
+            <%= image_tag 'twitter.png', class: "img-footer", alt: "Twitter" %>
+          </a>
+          <a href="https://students.gschool.it/students/201">
+            <%= image_tag 'galvanize.png', class: "img-footer", alt: "Galvanize" %>
+          </a>
+        </div>
+      </div>
+    </footer>
+  </div>
 
 </body>
 </html>
